<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">プレフィックスplus</string>
    <string name="action_privacy">プライバシーポリシー</string>
    <string name="action_source">ソースコードを見る</string>
    <string name="button_add_prefix">プレフィックスを追加</string>
    <string name="text_title">表示名称</string>
    <string name="text_prefix">プレフィックス</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">キャンセル</string>
    <string name="button_delete">削除</string>
    <string name="title_add_prefix">新しく追加</string>
    <string name="title_edit_prefix">編集</string>
    <string name="title_hook">プレフィックスを選択</string>
    <string name="item_no_prefix">なし</string>
    <string name="check_enable_prefix">アプリを有効にする</string>
    <string name="check_show_bottom">選択ダイアログを下部に表示</string>
	<string name="check_remove_prefix">通話履歴からプレフィックスを削除</string>
	<string name="text_drag_drop">プレフィックスを長押しすることで表示順を変えられます</string>
	<string name="toast_no_call_perm">プレフィックスplusに電話の権限がありません</string>
	<string name="toast_no_calllog_perm">プレフィックスplusに通話履歴の編集権限がありません</string>
	<string name="text_terms_of_service">本アプリは無料・広告なしであり、無保証です。\n開発者の環境にて、楽天でんわおよびみおふぉんにプレフィックスを付けて発信できることを確認していますが、すべての環境および接続先に対してプレフィックスを付けて発信できることを保障するものではありません。\nご理解いただいた方のみ、ご利用ください。</string>
	<string name="button_show_source">ソースコードを見る</string>
	<string name="button_show_privacy">プライバシーポリシー</string>
	<string name="button_agree">同意する</string>

	<string name="key_hook_gravity" translatable="false">hook_gravity</string>
    <string name="key_remove_prefix" translatable="false">remove_prefix</string>
    <string name="key_terms_agreed" translatable="false">terms_agreed</string>
</resources>
