<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_enable_prefix"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkEnableApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/divider" />
    
    <ListView
        android:id="@+id/listPrefix"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:headerDividersEnabled="true" >
    </ListView>

    <TextView
        android:id="@+id/textDragDrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_drag_drop"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_remove_prefix"
        android:id="@+id/checkRemovePrefix"/>
    
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_show_bottom"
        android:id="@+id/checkShowBottom"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonAddPrefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_add_prefix" />
    
</LinearLayout>
